atualização do dia 15 de setembro

--- a/projeto.css
+++ b/projeto.css
@@ -8,5 +8,8 @@ h1{
 }
 #capa {
 	height: 500px;
-	width: 1400px;
+	width: 1500px;
+	padding: 10px;
+	margin-left: 150px;
+	border: solid #000000;
 }
